--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,13 @@
     "homepage": "http://fractal.thephpleague.com/",
     "license": "MIT",
     "require": {
-        "php": ">=7.2"
+        "php": ">=5.6"
     },
     "require-dev": {
+        "league/fractal": "0.20.x-dev|>0.20",
         "mockery/mockery": "~1.0",
-        "phpstan/phpstan": "^0.11.8",
-        "phpunit/phpunit": "~8.0",
-        "squizlabs/php_codesniffer": "~3.4",
-        "league/fractal": "~1.0|1.0.x-dev"
+        "phpunit/phpunit": "~9.0|~8.0|~5.5",
+        "squizlabs/php_codesniffer": "~3.4"
     },
     "suggest": {
         "league/fractal": "The engine for which this adapter was built"
@@ -37,10 +36,10 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "0.20.x-dev"
         }
     },
     "conflict": {
-        "league/fractal": "<1.0"
+        "league/fractal": "<1.0 <0.20"
     }
 }
